--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                               <span>CircleCI</span>
                               <span>RabbitMQ</span>
                               <span>AWS</span>
+                              <span>ELK</span>
                             </div>
                         </div>
                     </div>
@@ -296,8 +297,9 @@
                             <div class="projectdate">2016 - 2017</div>
                             <h3>Legacy web crawler improvements</h3>
                             <ul>
-                              <li>Metadata parser (Open Graph, Schema.org)</li>
-                              <li>Old downloader component replacement</li>
+                              <li>Open Graph and Schema.org metadata parser</li>
+                              <li>Downloader component replacement</li>
+                              <li>Document comparator plugin</li>
                               <li>New ML based configuration integration into the system</li>
                             </ul>
 
@@ -306,6 +308,7 @@
                               <span>Spring Core</span>
                               <span>TestNG</span>
                               <span>MySQL</span>
+                              <span>Elasticsearch</span>
                               <span>Docker</span>
                             </div>
                         </div>
