--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
                             <div class="projectdate">2016</div>
                             <h3>Balancing system</h3>
 
+                            <p>Designed for natural gas markets that are introducing or upgrading market based operation in balancing and aim at a gradual evolution towards a full market based balancing regime.</p>
+                            
                             <div class="tags">
                               <span>Java 8</span>
                               <span>Spring Boot</span>
@@ -384,6 +386,8 @@
                             <div class="projectdate">2015</div>
                             <h3>Power plant energy production monitoring and balancing</h3>
 
+                            <p>A tool to help the operators to adjust the power production of smaller power plants connected to our power grid and help them forecasting the energy consumption.</p>
+                            
                             <div class="tags">
                               <span>Java 7</span>
                               <span>Spring Boot</span>
