insta vs flickr

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                             <li><a class="ripple-centered" title="linkedin" href="https://hu.linkedin.com/pub/roland-stiller/43/979/a73" target="_blank"><i class="icon icon-linkedin"></i></a></li>
                             <li><a class="ripple-centered" title="twitter" href="https://twitter.com/rolstiller" target="_blank"><i class="icon icon-twitter"></i></a></li>
                             <li><a class="ripple-centered" title="facebook" href="https://www.facebook.com/roland.stiller" target="_blank"><i class="icon icon-facebook"></i></a></li>
-                            <li><a class="ripple-centered" title="instagram" href="https://www.instagram.com/stillerr/" target="_blank"><i class="icon icon-instagram"></i></a></li>
+                            <li><a class="ripple-centered" title="flickr" href="https://www.flickr.com/photos/131728915@N03" target="_blank"><i class="icon icon-flickr"></i></a></li>
                 </ul>
             </div>
         </footer>
