--- a/index.html
+++ b/index.html
@@ -259,7 +259,25 @@
                 <div class="section-box timeline-box-inner">
                     <div class="row">
                         <div>
-                            <div class="projectdate">2017 -</div>
+                            <div class="projectdate">2018 -</div>
+                            <h3>Data Science - Knowledge Graph</h3>
+
+                            <div class="tags">
+                              <span>Python</span>
+                              <span>Apache Spark</span>
+                              <span>Data Science</span>
+                              <span>Knowledge Graph</span>
+                              <span>ETL</span>
+                              <span>Amazon Neptune</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
+                
+                <div class="section-box timeline-box-inner">
+                    <div class="row">
+                        <div>
+                            <div class="projectdate">2017 - 2018</div>
                             <h3>New web crawler development</h3>
 
                             <ul>
