--- a/index.html
+++ b/index.html
@@ -272,13 +272,15 @@
                             </div>
                         </div>
                     </div>
-                </div>                
+                </div>   
+                
+                <div class="bigspacer"></div>
                 
                 <div class="section-box timeline-box-inner">
                     <div class="row">
                         <div>
                             <div class="projectdate">2017 - 2018</div>
-                            <h3>New web crawler development</h3>
+                            <h3>Web crawler development</h3>
 
                             <ul>
                               <li>AWS infrastructure programmatically with Terraform</li>
