--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <ul class="profile-list">
                                     <li class="clearfix">
                                         <strong class="title">Age</strong>
-                                        <span class="cont">32</span>
+                                        <span class="cont">34</span>
                                     </li>
                                     <li class="clearfix">
                                         <strong class="title">Address</strong>
@@ -64,7 +64,6 @@
                             <li><a class="ripple-centered" title="github" href="https://github.com/stillerr/" target="_blank"><i class="icon icon-github"></i></a></li>
                             <li><a class="ripple-centered" title="linkedin" href="https://hu.linkedin.com/pub/roland-stiller/43/979/a73" target="_blank"><i class="icon icon-linkedin"></i></a></li>
                             <li><a class="ripple-centered" title="twitter" href="https://twitter.com/rolstiller" target="_blank"><i class="icon icon-twitter"></i></a></li>
-                            <li><a class="ripple-centered" title="facebook" href="https://www.facebook.com/roland.stiller" target="_blank"><i class="icon icon-facebook"></i></a></li>
                             <li><a class="ripple-centered" title="flickr" href="https://www.flickr.com/photos/131728915@N03" target="_blank"><i class="icon icon-flickr"></i></a></li>
                         </ul>
                     </div>
@@ -75,116 +74,11 @@
             <section id="me" class="section">
               <div class="section-box timeline-box-inner">
                   <div class="row">
-                      <p>Experienced Software Engineer with 10 years of history working in the information technology and web industry. Skilled in Java, SQL and NoSQL databases and Agile methodologies. Who really passionate about working for companies that drive innovation forward with inspiring technologies and culture.</p>
+                      <p>Experienced Software Engineer with 10 years of history working in the information technology and web industry. Skilled in Python,Java, SQL and NoSQL databases and Agile methodologies. Who really passionate about working for companies that drive innovation forward with inspiring technologies and culture.</p>
                   </div>
               </div>
             </section>
 
-            <section id="skills" class="section section-skills">
-                <h2 class="section-title">Skills</h2>
-
-                <div class="section-box">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">Java</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">Spring Framework</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">Maven</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">SQL</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">Docker</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">TDD</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">JavaScript / Node.js</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6">
-                            <div class="progress-bar">
-                                <div class="bar-data">
-                                    <span class="bar-title">Python</span>
-                                </div>
-                                <div class="bar-line">
-                                    <span class="bar-fill" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </section>
 
             <section id="experience" class="section section-experience">
                 <h2 class="section-title">Experience</h2>
@@ -200,8 +94,8 @@
                                 <span class="arrow"></span>
                                 <div class="date">2016 -</div>
                                 <h3>Meltwater</h3>
-                                <h4>Platform engineer / Java backend developer</h4>
-                                <p>Web crawler, classifier and cloud based infrastucture development.</p>
+                                <h4>Senior Software Engineer</h4>
+                                <p>Web crawlers, Knowledge Graphs, NLP, <abbr title="Machine Learning">ML</abbr> classification and cloud based infrastucture development.</p>
                             </div>
                         </div>
 
@@ -259,8 +153,48 @@
                 <div class="section-box timeline-box-inner">
                     <div class="row">
                         <div>
+                            <div class="projectdate">2020 -</div>
+                            <h3><abbr title="Natural Language Processing">NLP</abbr> and Data Engineering</h3>
+
+                            <ul>
+                                <li>AWS infrastructure with Terraform</li>
+                                <li>Continuous Delivery with Drone</li>
+                                <li>Dockerized Python and Java microservices</li>
+                                <li>Kafka streaming pipeline</li>
+                                <li>AWS ECS ⇾ Kubernetes migration</li>
+                                <li>Data Engineering</li>
+                            </ul>
+
+                            <div class="tags">
+                              <span>Python</span>
+                              <span>Data Science</span>
+                              <span>NLP</span>
+                              <span>Kubernetes</span>
+                              <span>Docker</span>
+                              <span>AWS ECS</span>
+                              <span>AWS SQS</span>
+                              <span>ELK</span>
+                              <span>Grafana</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bigspacer"></div>
+
+                <div class="section-box timeline-box-inner">
+                    <div class="row">
+                        <div>
                             <div class="projectdate">2018 -</div>
-                            <h3>Data Science - Knowledge Graph</h3>
+                            <h3>Knowledge Graph and Record Linking</h3>
+
+                            <ul>
+                                <li>AWS infrastructure with Terraform</li>
+                                <li>Continuous Delivery with Drone</li>
+                                <li>Kafka streaming pipeline</li>
+                                <li>Serverless architecture</li>
+                                <li>AWS EMR jobs</li>
+                            </ul>
 
                             <div class="tags">
                               <span>Python</span>
@@ -268,7 +202,10 @@
                               <span>Data Science</span>
                               <span>Knowledge Graph</span>
                               <span>ETL</span>
-                              <span>Amazon Neptune</span>
+                              <span>Docker</span>
+                              <span>AWS Neptune</span>
+                              <span>AWS Athena</span>
+                              <span>AWS Lambda</span>
                             </div>
                         </div>
                     </div>
@@ -283,16 +220,16 @@
                             <h3>Web crawler development</h3>
 
                             <ul>
-                              <li>AWS infrastructure programmatically with Terraform</li>
-                              <li>Continuous Delivery pipeline with CircleCI</li>
+                              <li>AWS infrastructure with Terraform</li>
+                              <li>Continuous Delivery with CircleCI</li>
                               <li>RabbitMQ messaging</li>
                               <li>Dockerized Java microservices</li>
-                              <li>Machine learning page classifiers</li>
-                              <li>System wide testing tool</li>
+                              <li>Machine Learning classifiers</li>
+                              <li>System testing utilities</li>
                             </ul>
 
                             <div class="tags">
-                              <span>Java 8</span>
+                              <span>Java</span>
                               <span>Spring Boot</span>
                               <span>Spring Integration</span>
                               <span>REST</span>
@@ -302,7 +239,7 @@
                               <span>Docker</span>
                               <span>CircleCI</span>
                               <span>RabbitMQ</span>
-                              <span>AWS</span>
+                              <span>AWS ECS</span>
                               <span>ELK</span>
                             </div>
                         </div>
@@ -324,7 +261,7 @@
                             </ul>
 
                             <div class="tags">
-                              <span>Java 8</span>
+                              <span>Java</span>
                               <span>Spring Core</span>
                               <span>TestNG</span>
                               <span>MySQL</span>
@@ -607,7 +544,6 @@
                     <li><a class="ripple-centered" title="github" href="https://github.com/stillerr/" target="_blank"><i class="icon icon-github"></i></a></li>
                             <li><a class="ripple-centered" title="linkedin" href="https://hu.linkedin.com/pub/roland-stiller/43/979/a73" target="_blank"><i class="icon icon-linkedin"></i></a></li>
                             <li><a class="ripple-centered" title="twitter" href="https://twitter.com/rolstiller" target="_blank"><i class="icon icon-twitter"></i></a></li>
-                            <li><a class="ripple-centered" title="facebook" href="https://www.facebook.com/roland.stiller" target="_blank"><i class="icon icon-facebook"></i></a></li>
                             <li><a class="ripple-centered" title="flickr" href="https://www.flickr.com/photos/131728915@N03" target="_blank"><i class="icon icon-flickr"></i></a></li>
                 </ul>
             </div>
