--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="section-box timeline-box-inner">
                     <div class="row">
                         <div>
-                            <div class="projectdate">2018 -</div>
+                            <div class="projectdate">2018 - 2020</div>
                             <h3>Knowledge Graph and Record Linking</h3>
 
                             <ul>
